# kosher-dill

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.adoc  commands.py  constants.py  differ.py  framework.py  pyproject.toml  sonar-project.properties  test_all.py  test_differ.py  tests.conf
.github/workflows/: python-app.yml
configs/examples/: echo.yaml  ls.yaml
configs/self_test/: self.yaml
test_configs/examples/: echo.yaml  ignore_fields.yaml  json_path.yaml  ls.yaml  sanity_checks.yaml
test_configs/sanity_checks/: _sanity_checks.yaml  _sanity_checks_stderr_expected_stderr_content_type_mismatch.yml  _sanity_checks_stderr_filepath_duplication.yml  _sanity_checks_stdout_expected_stdout_content_type_mismatch.yml  _sanity_checks_stdout_filepath_duplication.yml  _sanity_checks_test_name_duplication.yml
test_configs/self_test/: self.yaml
test_configs/tools/: XMLextract.yaml  runAMPL.yaml
tests_data/examples/expected_stderr/: sanity_expected_stderr.json
tests_data/examples/expected_stdout/: ignore_fields_expected.json
tests_data/examples/stdin/: ignore_fields_actual.json
