[tool.poetry]
name = "test_framework"
version = "0.1.1"
description = "Test framework for console tools"
authors = ["Alexander Boiko <django.develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dictdiffer = "^0.9.0"
parameterized = "^0.8.1"
pyaml-env = "^1.2.0"
dacite = "^1.6.0"
envyaml = "^1.10.211231"
environ-config = "^22.1.0"
coverage = "^6.4.1"
diff-match-patch = "^20200713"
pytest = "^7.1.2"
yaml-include = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.6.0"}
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E231', 'E241', 'W503',]
max-line-length = 120
count = true
max-complexity = 10

[tool.autoflake]
check = true
imports = ["__future__", "builtins", "collections", "contextlib", "dataclasses", "enum", "functools", "itertools", "logging", "os", "pathlib", "re", "shutil", "subprocess", "sys", "time", "typing", "unittest", "warnings"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311
skipsdist = True
[testenv]
setenv =
    USER = root
    PWD = .
    TEST_CONFIGS_DIR = test_configs/examples/
deps =
    pytest
    coverage
    poetry
    flake8-pyproject
    flake8-cognitive-complexity
commands =
    flake8 . --count --statistics --ignore=E203,E231,E241,W503 --max-line-length=120 --max-complexity=10 --max-cognitive-complexity=15
    poetry install
    coverage erase
#    coverage run -m pytest
    coverage run -m unittest -vv
    coverage xml
[coverage:run]
relative_files = True
branch = True
"""



